# resume.md

./: pyproject.toml  resume.html  resume.md  resume.py
