[tool.poetry]
name = "resume-md"
version = "0.1.0"
description = ""
authors = ["Colin Middleton <colindmiddleton@gmail.com>"]
readme = "README.md"
packages = [{include = "resume"}]

[tool.poetry.dependencies]
python = "^3.9"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
